instance.tf
resource "aws_instance" "example" {
  ami           = var.AMIS[var.AWS_REGION]
  instance_type = "t2.micro"

  # the VPC subnet
  subnet_id = aws_subnet.test-subnet.id

  # the public SSH key
  key_name = aws_key_pair.testaws.key_name
}
